--- a/chisiamo.html
+++ b/chisiamo.html
@@ -21,12 +21,11 @@
         <li><a href="index.html" class="header__link">Home</a></li>
         <li><a href="#" class="header__link active">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
-        <li><a href="index.html/#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
-        <!-- LOGIN CHE SPACCA -->
-        <!-- <li><a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li> -->
+        <li><a href="index.html#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
       </ul>
       <div class="header__quick">
         <a class="button-small" href="login.html">Accedi</a>
+        <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
           <div class="icon-hamburger menu-overlay">
             <span></span>
             <span></span>
