--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#" class="header__link active">Home</a></li>
         <li><a href="chisiamo.html" class="header__link">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
-        <li><a href="#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
+        <li><a href="index.html#contatti"rel="noreferrer noopener" class="header__link">Contatti</a></li>
       </ul>
       <div class="header__quick">
         <a class="button-small" href="login.html">Accedi</a>
@@ -93,7 +93,7 @@
   </div>
 <div class="spacer"></div>
  <!-- Contact -->
- <div class="grid mediaform pt-2 mt-3" id="contatti">
+ <div class="grid mediaform pt-4 mt-3" id="contatti">
   <div class="col-50 p-3 sma-text-center contatti__cont">
     <h2 class="text-1">Contatti</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam iusto quis numquam voluptatibus sed saepe animi eaque at possimus! Soluta velit vel cupiditate sint sed voluptas rerum ea ab!     
@@ -105,7 +105,8 @@
       <ul>
         <li class="f__input">
           <label for=nome>Nome</label>
-          <input type="text" name="nome" class="input__text" required>
+          <input type="text" name="nome" class="input__text" required
+          autofocus>
         </li>
         <li class="f__input">
           <label for="email">Email</label>
