--- a/login.html
+++ b/login.html
@@ -14,65 +14,53 @@
 <body>
     <div class="overflow-h">
     <!-- Navbar -->
-        <header class="header">
-          <div class="header__content">
-            <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
-            <!-- <a class="header__logo" href="#"> <strong>LOGO</strong> </a> -->
-            <ul class="header__menu">
-              
-              <li><a href="index.html#chisiamo" class="header__link">Chi siamo</a></li>
-              <li><a href="index.html#team" class="header__link">Il nostro team</a></li>
-              <li><a href="index.html#progetti" class="header__link">Progetti</a></li>
-              <li><a href="index.html#lavoraconnoi" class="header__link">Lavora con noi</a></li>
-              <li><a href="#"target="_blank" rel="noreferrer noopener" class="header__link active">Accedi</a></li>
-            </ul>
-            <div class="header__quick">
-              <a class="button-small" href="index.html#contatti">Contatti</a>
-                <div class="icon-hamburger menu-overlay">
-                  <span></span>
-                  <span></span>
-                </div>
-            </div>
-          </div>
-        </header>
-
-    
-<!-- Sign up form -->
-<section class="signup">
-    <div class="container">
-        <div class="signup-content">
-            <div class="signup-form">
-                <h2 class="form-title">Registrati</h2>
-                <form method="POST" class="register-form" id="register-form">
-                    <div class="form-group">
-                        <label for="name"><i class="fa-solid fa-user"></i></label>
-                        <input type="text" name="name" id="name" placeholder="Nome"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="email"><i class="fa-solid fa-at"></i></label>
-                        <input type="email" name="email" id="email" placeholder="Email"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="pass"><i class="fa-solid fa-lock"></i></label>
-                        <input type="password" name="pass" id="pass" placeholder="Password"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="re-pass"><i class="fa-solid fa-lock-open"></i></label>
-                        <input type="password" name="re_pass" id="re_pass" placeholder="Ripeti password"/>
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                        <label for="agree-term" class="label-agree-term"><span><span></span></span>Accetto le  <a href="#" class="term-service">Condizioni di servizio</a></label>
-                    </div>
-                    <div class="form-group form-button">
-                        <input type="submit" name="signup" id="signup" class="form-submit" value="Registrati"/>
-                    </div>
-                </form>
+    <header class="header">
+      <div class="header__content">
+        <a class="header__logo" href="index.html"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
+        <ul class="header__menu">
+          <li><a href="index.html" class="header__link">Home</a></li>
+          <li><a href="chisiamo.html" class="header__link">Chi siamo</a></li>
+          <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
+          <li><a href="index.html#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
+        </ul>
+        <div class="header__quick">
+          <a class="button-small" href="login.html">Accedi</a>
+           <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
+            <div class="icon-hamburger menu-overlay">
+              <span></span>
+              <span></span>
             </div>
         </div>
-    </div>
-</section>
-
+      </div>
+    </header>
+<!-- Login -->
+    <main id="main-login">
+      <div>
+          <div class="login-container">
+              <h2>Accedi</h2>
+              <div class="form-group">
+                <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+                  <input class="input100" type="text" name="email">
+                  <span class="focus-input100" data-placeholder="Email"></span>
+                </div>
+              </div>
+              <div class="form-group">
+                  <div class="wrap-input100 validate-input" data-validate="Enter password">
+                    <span class="btn-show-pass">
+                      <i class="fa-solid fa-eye"></i>
+                    </span>
+                    <input class="input100" type="password" name="pass">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                  </div>
+              </div>
+              <button class="btn-login-register ">Accedi</button>
+              <div class="signin">
+                  <p>Non sei ancora registrato? <a href="registrati.html">Registrati</a>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </main>
 
 <!-- Footoer -->
     <footer>
