--- a/registrati.html
+++ b/registrati.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-signUpIn.css">
+    <!-- <link rel="stylesheet" href="style-signUpIn.css"> -->
+     <link rel="stylesheet" href="login-style.css">
 
     
 </head>
@@ -23,7 +25,7 @@
         </ul>
         <div class="header__quick">
           <a class="button-small" href="login.html">Accedi</a>
-           <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
+          <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
             <div class="icon-hamburger menu-overlay">
               <span></span>
               <span></span>
@@ -31,35 +33,52 @@
         </div>
       </div>
     </header>
-
-    <!-- Sign up -->
-        <div class="sign__container">
-            <div class="sign__main">
-                <input type="checkbox" id="chk" aria-hidden="true">
-                    <div class="signup">
-                        <form class="signup__form">
-                            <label for="chk" aria-hidden="true" id="signup__label">Registrati</label>
-                            <input type="text" name="sign__txt" placeholder="Nome" required="">
-                            <input type="email" name="signup__email" placeholder="Email" required="">
-                            <input type="number" name="signup__telefono" placeholder="Telefono" required="">
-                            <input type="password" name="signup__pswd" placeholder="Password" required="">
-                            <input type="password" name="signup__pswd" placeholder="Ripeti password" required="">
-                            <button id="signup__button">Registrati</button>
-                        </form>
-                    </div>
-                    <div class="login">
-                        <form class="signin__form">
-                            <label for="chk" aria-hidden="true" id="signin__label">Accedi</label>
-                            <input type="email" name="signin__email" placeholder="Email" required="">
-                            <input type="password" name="signin__pswd" placeholder="Password" required="">
-                            <button id="signin__button">Accedi</button>
-                        </form>
-                    </div>
+<!-- Login -->
+    <main id="main-register">
+      <div>
+          <div class="register-container">
+              <h2>Registrati</h2>
+              <div class="form-group">
+                <div class="wrap-input100 validate-input" >
+                  <input class="input100" type="text" name="nome">
+                  <span class="focus-input100" data-placeholder="Nome"></span>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+                  <input class="input100" type="text" name="email">
+                  <span class="focus-input100" data-placeholder="Email"></span>
+                </div>
+              </div>
+              <div class="form-group">
+                  <div class="wrap-input100 validate-input" data-validate="Enter password">
+                    <span class="btn-show-pass">
+                      <i class="fa-solid fa-eye"></i>
+                    </span>
+                    <input class="input100" type="password" name="pass">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                  </div>
+              </div>
+              <div class="form-group">
+                <div class="wrap-input100 validate-input" data-validate="Enter password">
+                  <span class="btn-show-pass">
+                    <i class="fa-solid fa-eye"></i>
+                  </span>
+                  <input class="input100" type="password" name="pass">
+                  <span class="focus-input100" data-placeholder="Conferma password"></span>
+                </div>
             </div>
-        </div>
-        <!-- <div class="spacer2"></div> -->
+              <button class="btn-login-register ">Registrati</button>
+              <div class="signup">
+                  <p>Hai già un account? <a href="login.html">Accedi</a>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </main>
 
-        <footer>
+<!-- Footoer -->
+    <footer>
           <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
           <br>
           <span> <i class="fa-solid fa-location-dot"></i> &nbsp Via lorem, 123 - 12345 Città (Provincia) PAESE </span> 
@@ -84,11 +103,11 @@
           </div>
           <br>
           <span id="hi">Designed by <a target="_blank" href="https://www.linkedin.com/in/valeria-parise-7a90/">Valeria Parise</a></span>
-        </footer>
+    </footer>
         
 
         <!-- Js per Menu -->
-<script> 
+    <script> 
     const menu__btn = document.querySelector('.icon-hamburger');
     const allLink = document.querySelectorAll('.header__menu li a');
   
