--- a/registrati.html
+++ b/registrati.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style-signUpIn.css"> -->
-     <link rel="stylesheet" href="login-style.css">
+     <!-- <link rel="stylesheet" href="login-style.css"> -->
 
     
 </head>
@@ -34,23 +34,23 @@
       </div>
     </header>
 <!-- Login -->
-    <main id="main-register">
+    <main id="main__register">
       <div>
-          <div class="register-container">
+          <div class="register__container">
               <h2>Registrati</h2>
-              <div class="form-group">
+              <div class="form__group">
                 <div class="wrap-input100 validate-input" >
                   <input class="input100" type="text" name="nome">
                   <span class="focus-input100" data-placeholder="Nome"></span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form__group">
                 <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
                   <input class="input100" type="text" name="email">
                   <span class="focus-input100" data-placeholder="Email"></span>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form__group">
                   <div class="wrap-input100 validate-input" data-validate="Enter password">
                     <span class="btn-show-pass">
                       <i class="fa-solid fa-eye"></i>
@@ -59,7 +59,7 @@
                     <span class="focus-input100" data-placeholder="Password"></span>
                   </div>
               </div>
-              <div class="form-group">
+              <div class="form__group">
                 <div class="wrap-input100 validate-input" data-validate="Enter password">
                   <span class="btn-show-pass">
                     <i class="fa-solid fa-eye"></i>
